--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 01:59:00 AM</p>
+    <p class="lastupdate">09/13/2020 02:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">56.8&#176;F</td>
+        <td class="data">56.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">56.8&#176;F</td>
+        <td class="data">56.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">56.8&#176;F</td>
+        <td class="data">56.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">40.8&#176;F</td>
+        <td class="data">40.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">55%</td>
+        <td class="data">54%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.875 inHg (-0.005)</td>
+        <td class="data">29.879 inHg (-0.004)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph NW (315&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.0&#176;F</td>
+        <td class="data">73.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             60.9</span><br/>
-          <span title="01:50:14 AM">
-            56.8</span>
+          <span title="02:02:52 AM">
+            56.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:01 AM (Sunday)">
             60.9</span><br/>
-          <span title="01:50:14 AM (Sunday)">
-            56.8</span>
+          <span title="02:02:52 AM (Sunday)">
+            56.6</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="01:50:14 AM" class="loval">
-            56.8</span>
+          <span title="02:02:52 AM" class="loval">
+            56.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:50:14 AM (Sunday)" class="loval">
-            56.8</span>
+          <span title="02:02:52 AM (Sunday)" class="loval">
+            56.6</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/12/2020 07:15:43 AM" class="loval">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 11 hours, 12 minutes</td>
+      <td class="data">11 days, 11 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 11 hours, 12 minutes</td>
+      <td class="data">11 days, 11 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
