--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 03:04:00 AM</p>
+    <p class="lastupdate">09/13/2020 03:09:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">54.2&#176;F</td>
+        <td class="data">53.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">54.2&#176;F</td>
+        <td class="data">53.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">54.2&#176;F</td>
+        <td class="data">53.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">39.7&#176;F</td>
+        <td class="data">39.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">58%</td>
+        <td class="data">59%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.874 inHg (-0.018)</td>
+        <td class="data">29.874 inHg (-0.017)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             60.9</span><br/>
-          <span title="03:02:31 AM">
-            54.2</span>
+          <span title="03:08:09 AM">
+            53.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:01 AM (Sunday)">
             60.9</span><br/>
-          <span title="03:02:31 AM (Sunday)">
-            54.2</span>
+          <span title="03:08:09 AM (Sunday)">
+            53.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="03:02:31 AM" class="loval">
-            54.2</span>
+          <span title="03:08:09 AM" class="loval">
+            53.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:02:31 AM (Sunday)" class="loval">
-            54.2</span>
+          <span title="03:08:09 AM (Sunday)" class="loval">
+            53.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/12/2020 07:15:43 AM" class="loval">
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="03:01:27 AM">
-            58</span><br/>
+          <span title="03:06:33 AM">
+            59</span><br/>
           <span title="12:00:20 AM">
             46</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:01:27 AM (Sunday)">
-            58</span><br/>
+          <span title="03:06:33 AM (Sunday)">
+            59</span><br/>
           <span title="12:00:20 AM (Sunday)">
             46</span>
         </td>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          267
+          264
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          267
+          264
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 12 hours, 17 minutes</td>
+      <td class="data">11 days, 12 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 12 hours, 17 minutes</td>
+      <td class="data">11 days, 12 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
