--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 03:09:00 AM</p>
+    <p class="lastupdate">09/13/2020 03:14:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.874 inHg (-0.017)</td>
+        <td class="data">29.873 inHg (-0.019)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SSW (202&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -119,7 +119,7 @@
         <tr>
           <td class="label">Moon Phase</td>
           <td class="data">Waning crescent<br/>
-            19%</td>
+            18%</td>
         </tr>
       </table>
     </div>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             60.9</span><br/>
-          <span title="03:08:09 AM">
-            53.9</span>
+          <span title="03:12:45 AM">
+            53.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:01 AM (Sunday)">
             60.9</span><br/>
-          <span title="03:08:09 AM (Sunday)">
-            53.9</span>
+          <span title="03:12:45 AM (Sunday)">
+            53.8</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="03:08:09 AM" class="loval">
-            53.9</span>
+          <span title="03:12:45 AM" class="loval">
+            53.8</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:08:09 AM (Sunday)" class="loval">
-            53.9</span>
+          <span title="03:12:45 AM (Sunday)" class="loval">
+            53.8</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/12/2020 07:15:43 AM" class="loval">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          264
+          263
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          264
+          263
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 12 hours, 22 minutes</td>
+      <td class="data">11 days, 12 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 12 hours, 22 minutes</td>
+      <td class="data">11 days, 12 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
