--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 03:34:00 AM</p>
+    <p class="lastupdate">09/13/2020 03:39:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">53.4&#176;F</td>
+        <td class="data">53.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">53.4&#176;F</td>
+        <td class="data">53.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">53.4&#176;F</td>
+        <td class="data">53.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">39.9&#176;F</td>
+        <td class="data">40.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">60%</td>
+        <td class="data">61%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.871 inHg (-0.014)</td>
+        <td class="data">29.867 inHg (-0.017)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             60.9</span><br/>
-          <span title="03:33:47 AM">
-            53.3</span>
+          <span title="03:35:59 AM">
+            53.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:01 AM (Sunday)">
             60.9</span><br/>
-          <span title="03:33:47 AM (Sunday)">
-            53.3</span>
+          <span title="03:35:59 AM (Sunday)">
+            53.2</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="03:33:47 AM" class="loval">
-            53.3</span>
+          <span title="03:35:59 AM" class="loval">
+            53.2</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:33:47 AM (Sunday)" class="loval">
-            53.3</span>
+          <span title="03:35:59 AM (Sunday)" class="loval">
+            53.2</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/12/2020 07:15:43 AM" class="loval">
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="12:04:00 AM">
             29.894</span><br/>
-          <span title="03:18:01 AM">
-            29.869</span>
+          <span title="03:36:01 AM">
+            29.867</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:04:00 AM (Sunday)">
             29.894</span><br/>
-          <span title="03:18:01 AM (Sunday)">
-            29.869</span>
+          <span title="03:36:01 AM (Sunday)">
+            29.867</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          263
+          255
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          263
+          255
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -472,14 +472,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             74.6</span><br/>
-          <span title="03:25:01 AM">
-            73.3</span>
+          <span title="03:37:01 AM">
+            73.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:01 AM (Sunday)">
             74.6</span><br/>
-          <span title="03:25:01 AM (Sunday)">
-            73.3</span>
+          <span title="03:37:01 AM (Sunday)">
+            73.2</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 04:03:02 PM">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">85%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 12 hours, 47 minutes</td>
+      <td class="data">11 days, 12 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 12 hours, 47 minutes</td>
+      <td class="data">11 days, 12 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
