--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 03:49:00 AM</p>
+    <p class="lastupdate">09/13/2020 03:54:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">53.0&#176;F</td>
+        <td class="data">53.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">53.0&#176;F</td>
+        <td class="data">53.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">53.0&#176;F</td>
+        <td class="data">53.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">40.3&#176;F</td>
+        <td class="data">40.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">62%</td>
+        <td class="data">63%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.869 inHg (-0.012)</td>
+        <td class="data">29.870 inHg (-0.011)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SSW (202&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="03:45:51 AM">
-            62</span><br/>
+          <span title="03:50:59 AM">
+            63</span><br/>
           <span title="12:00:20 AM">
             46</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:45:51 AM (Sunday)">
-            62</span><br/>
+          <span title="03:50:59 AM (Sunday)">
+            63</span><br/>
           <span title="12:00:20 AM (Sunday)">
             46</span>
         </td>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          244
+          243
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          244
+          243
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -472,14 +472,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             74.6</span><br/>
-          <span title="03:37:01 AM">
-            73.2</span>
+          <span title="03:52:01 AM">
+            73.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="12:00:01 AM (Sunday)">
             74.6</span><br/>
-          <span title="03:37:01 AM (Sunday)">
-            73.2</span>
+          <span title="03:52:01 AM (Sunday)">
+            73.1</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 04:03:02 PM">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 13 hours, 2 minutes</td>
+      <td class="data">11 days, 13 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 13 hours, 2 minutes</td>
+      <td class="data">11 days, 13 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
