--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 07:14:00 AM</p>
+    <p class="lastupdate">09/13/2020 07:19:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">48.8&#176;F</td>
+        <td class="data">48.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">48.8&#176;F</td>
+        <td class="data">48.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">48.8&#176;F</td>
+        <td class="data">48.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">39.8&#176;F</td>
+        <td class="data">38.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">71%</td>
+        <td class="data">68%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.908 inHg (0.038)</td>
+        <td class="data">29.910 inHg (0.035)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SSW (202&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -303,14 +303,14 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="07:08:01 AM">
-            29.910</span><br/>
+          <span title="07:17:01 AM">
+            29.913</span><br/>
           <span title="03:40:01 AM">
             29.865</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="07:08:01 AM (Sunday)">
-            29.910</span><br/>
+          <span title="07:17:01 AM (Sunday)">
+            29.913</span><br/>
           <span title="03:40:01 AM (Sunday)">
             29.865</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 16 hours, 27 minutes</td>
+      <td class="data">11 days, 16 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 16 hours, 27 minutes</td>
+      <td class="data">11 days, 16 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
