--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 08:14:00 AM</p>
+    <p class="lastupdate">09/13/2020 08:19:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">50.8&#176;F</td>
+        <td class="data">51.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">50.8&#176;F</td>
+        <td class="data">51.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">50.8&#176;F</td>
+        <td class="data">51.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -66,15 +66,15 @@
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">65%</td>
+        <td class="data">64%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.920 inHg (0.037)</td>
+        <td class="data">29.921 inHg (0.038)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph ENE (68&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -303,14 +303,14 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="08:12:01 AM">
-            29.923</span><br/>
+          <span title="08:15:01 AM">
+            29.924</span><br/>
           <span title="03:40:01 AM">
             29.865</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="08:12:01 AM (Sunday)">
-            29.923</span><br/>
+          <span title="08:15:01 AM (Sunday)">
+            29.924</span><br/>
           <span title="03:40:01 AM (Sunday)">
             29.865</span>
         </td>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          234
+          232
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          234
+          232
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 17 hours, 27 minutes</td>
+      <td class="data">11 days, 17 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 17 hours, 27 minutes</td>
+      <td class="data">11 days, 17 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
